progress: update coming soon

--- a/counted-tech/src/app/app.component.html
+++ b/counted-tech/src/app/app.component.html
@@ -1,3 +1,4 @@
+<div class="all">
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
@@ -18,3 +19,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <router-outlet></router-outlet>
+
+</div>
