--- a/counted-tech/src/app/cards/cards.component.html
+++ b/counted-tech/src/app/cards/cards.component.html
@@ -1,1 +1,6 @@
-<p>cards works!</p>
+<div class="cards">
+    <div class="all">
+        <span>All</span>
+        <button>4</button>
+    </div>
+</div>
