--- a/counted-tech/src/app/cards/cards.component.html
+++ b/counted-tech/src/app/cards/cards.component.html
@@ -3,4 +3,20 @@
         <span>All</span>
         <button>4</button>
     </div>
+    <div class="all">
+        <span>Available</span>
+        <button>4</button>
+    </div>
+    <div class="all">
+        <span>Inactive</span>
+        <button>4</button>
+    </div>
+    <div class="all">
+        <span>Absent</span>
+        <button>4</button>
+    </div>
+    <div class="all">
+        <span>Vacation</span>
+        <button>4</button>
+    </div>
 </div>
