--- a/counted-tech/src/app/bottom/bottom.component.html
+++ b/counted-tech/src/app/bottom/bottom.component.html
@@ -1,1 +1,50 @@
-<p>bottom works!</p>
+<div class="middle">
+    <div class="cards">
+        <div class="up">
+            <div class="dd">
+                <button class="red b">3</button><div class="space"></div>
+                <button class="green b">3</button>
+            </div>
+            <div class="d b">
+                <button>0</button>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="down">
+            <span>Sectionname</span>
+        </div>
+    </div>
+    <div class="cards">
+        <div class="up">
+            <div class="dd">
+                <button class="b red">3</button><div class="space"></div>
+                <button class="b green">3</button>
+            </div>
+            <div class="b d">
+                <button>0</button>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="down">
+            <span>Sectionname</span>
+        </div>
+    </div>
+    <div class="cards">
+        <div class="up">
+            <div class="dd">
+                <button class="b red">3</button><div class="space"></div>
+                <button class="b green">3</button>
+            </div>
+            <div class="b d">
+                <button>0</button>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="down">
+            <span>Sectionname</span>
+        </div>
+    </div>
+</div>
