--- a/counted-tech/src/app/card-all/card-all.component.html
+++ b/counted-tech/src/app/card-all/card-all.component.html
@@ -1,1 +1,19 @@
-<p>card-all works!</p>
+<div class="all">
+    <div class="first">
+        <div class="head">
+            <span>All</span>
+            <span>.</span>
+        </div>
+        <input type="text">
+    </div>
+    <div class="second">
+        <div class="img">
+            <img src="" alt="">
+        </div>
+        <div class="text">
+            <span>Vorname</span>
+            <span>Nochname</span>
+        </div>
+    </div>
+
+</div>
