--- a/counted-tech/src/app/navbar/navbar.component.html
+++ b/counted-tech/src/app/navbar/navbar.component.html
@@ -1,4 +1,11 @@
 <div class="nav">
     <img class="logo"src="../../assets/logo.png" alt="">
+    <img class="logo"src="../../assets/logo.png" alt="">
+    <img class="logo"src="../../assets/logo.png" alt="">
+    <img class="logo"src="../../assets/logo.png" alt="">
+    <img class="logo"src="../../assets/logo.png" alt="">
+    <img class="logo"src="../../assets/logo.png" alt="">
+    <img class="logo"src="../../assets/logo.png" alt="">
+    <img class="logo"src="../../assets/logo.png" alt="">
 
 </div>
