--- a/counted-tech/src/styles.css
+++ b/counted-tech/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 body{
     background: #F2F5FA;
+    font-family: 'Poppins', sans-serif;
 }
