--- a/counted-tech/src/app/card-absent/card-absent.component.html
+++ b/counted-tech/src/app/card-absent/card-absent.component.html
@@ -1,1 +1,25 @@
-<p>card-absent works!</p>
+<div class="all">
+    <div class="first">
+        <div class="mmm">
+            <div class="txt">
+                <span>Absent</span>
+            </div>
+            <div class="img">
+                <img src="../../assets/close.svg" alt="" class="svg">
+            </div>
+        </div>
+        <br>
+        <input type="text" placeholder="Search...">
+    </div>
+    <br>
+    <div class="second">
+        <div class="img">
+            <img src="../../assets/avatar.png" alt="">
+        </div>
+        <div class="text">
+            <span>Vorname</span><br>
+            <span>Nochname</span>
+        </div>
+    </div>
+
+</div>
