--- a/counted-tech/src/app/card-all/card-all.component.html
+++ b/counted-tech/src/app/card-all/card-all.component.html
@@ -1,17 +1,23 @@
 <div class="all">
     <div class="first">
-        <div class="head">
-            <span>All</span>
-            <span>.</span>
+        <div class="mmm">
+            <div class="txt">
+                <span>All</span>
+            </div>
+            <div class="img">
+                <img src="../../assets/close.svg" alt="" class="svg">
+            </div>
         </div>
-        <input type="text">
+        <br>
+        <input type="text" placeholder="Search...">
     </div>
+    <br>
     <div class="second">
         <div class="img">
-            <img src="" alt="">
+            <img src="../../assets/avatar.png" alt="">
         </div>
         <div class="text">
-            <span>Vorname</span>
+            <span>Vorname</span><br>
             <span>Nochname</span>
         </div>
     </div>
