--- a/counted-tech/src/app/cards/cards.component.html
+++ b/counted-tech/src/app/cards/cards.component.html
@@ -1,22 +1,22 @@
 <div class="cards">
     <div class="all">
         <span>All</span>
-        <button class="all-btn">4</button>
+        <button (click)="openCardAllComponent()" class="all-btn">4</button>
     </div>
     <div class="all">
         <span>Available</span>
-        <button class="available-btn">4</button>
+        <button (click)="openCardAvailableComponent()" class="available-btn">4</button>
     </div>
     <div class="all">
         <span>Inactive</span>
-        <button class="inactive-btn">4</button>
+        <button (click)="openCardInactiveComponent()" class="inactive-btn">4</button>
     </div>
     <div class="all">
         <span>Absent</span>
-        <button class="absent-btn">4</button>
+        <button (click)="openCardAbsentComponent()" class="absent-btn">4</button>
     </div>
     <div class="all">
         <span>Vacation</span>
-        <button class="vacation-btn">4</button>
+        <button (click)="openCardVacationComponent()" class="vacation-btn">4</button>
     </div>
 </div>
