--- a/counted-tech/src/app/main/main.component.html
+++ b/counted-tech/src/app/main/main.component.html
@@ -2,4 +2,8 @@
 <app-cards></app-cards>
 <app-middle></app-middle>
 <app-bottom></app-bottom>
-<app-card-all></app-card-all>
+<!-- <app-card-all></app-card-all>
+<app-card-available></app-card-available>
+<app-card-absent></app-card-absent>
+<app-card-inactive></app-card-inactive>
+<app-card-vacation></app-card-vacation>  -->
