--- a/counted-tech/src/app/navbar/navbar.component.css
+++ b/counted-tech/src/app/navbar/navbar.component.css
@@ -2,8 +2,18 @@
     display: flex;
     flex-direction: row;
 }
-/* .logo{
-    margin-top: -60px;
-    margin-left: -60px;
-    transform: scale(0.5);
-} */
+/* .icon{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}*/
+.svg{ 
+    margin-top: 30px;
+    width: 50px; 
+    height: 50px;
+    margin-right: 16px;
+    cursor: pointer;
+}
+.logo{
+    cursor: pointer;
+}
