--- a/counted-tech/src/app/navbar/navbar.component.html
+++ b/counted-tech/src/app/navbar/navbar.component.html
@@ -1,11 +1,13 @@
 <div class="nav">
     <img class="logo"src="../../assets/logo.png" alt="">
-    <img class="logo"src="../../assets/logo.png" alt="">
-    <img class="logo"src="../../assets/logo.png" alt="">
-    <img class="logo"src="../../assets/logo.png" alt="">
-    <img class="logo"src="../../assets/logo.png" alt="">
-    <img class="logo"src="../../assets/logo.png" alt="">
-    <img class="logo"src="../../assets/logo.png" alt="">
-    <img class="logo"src="../../assets/logo.png" alt="">
+    <div class="icon">
+        <img src="../../assets/icon1.svg" alt="" class="svg">
+        <img src="../../assets/icon2.svg" alt="" class="svg">
+        <img src="../../assets/icon3.svg" alt="" class="svg">
+        <img src="../../assets/icon4.svg" alt="" class="svg">
+        <img src="../../assets/icon5.svg" alt="" class="svg">
+        <img src="../../assets/icon6.svg" alt="" class="svg">
+        <img src="../../assets/icon7.svg" alt="" class="svg">
+    </div>
 
 </div>
