--- a/counted-tech/src/app/bottom/bottom.component.html
+++ b/counted-tech/src/app/bottom/bottom.component.html
@@ -6,7 +6,7 @@
                 <button class="green b">3</button>
             </div>
             <div class="d b">
-                <button>0</button>
+                <img class="svg" src="../../assets/eyes.svg" alt="">
             </div>
         </div>
         <br>
@@ -22,7 +22,7 @@
                 <button class="b green">3</button>
             </div>
             <div class="b d">
-                <button>0</button>
+                <img class="svg" src="../../assets/eyes.svg" alt="">
             </div>
         </div>
         <br>
@@ -38,7 +38,7 @@
                 <button class="b green">3</button>
             </div>
             <div class="b d">
-                <button>0</button>
+                <img class="svg" src="../../assets/eyes.svg" alt="">
             </div>
         </div>
         <br>
