--- a/counted-tech/src/app/middle/middle.component.html
+++ b/counted-tech/src/app/middle/middle.component.html
@@ -10,7 +10,7 @@
                 <button class="green wide">55555</button>
             </div>
             <div class="d b">
-                <button>0</button>
+                <img class="svg" src="../../assets/eyes.svg" alt="">
             </div>
         </div>
         <br>
@@ -31,7 +31,7 @@
                 <button class="green wide">55555</button>
             </div>
             <div class="b d">
-                <button>0</button>
+                <img class="svg" src="../../assets/eyes.svg" alt="">
             </div>
         </div>
         <br>
@@ -52,7 +52,7 @@
                 <button class="green wide">55555</button>
             </div>
             <div class="b d">
-                <button>0</button>
+                <img class="svg" src="../../assets/eyes.svg" alt="">
             </div>
         </div>
         <br>
