--- a/counted-tech/src/app/location-overview/location-overview.component.html
+++ b/counted-tech/src/app/location-overview/location-overview.component.html
@@ -1,1 +1,41 @@
-<p>location-overview works!</p>
+<div class="main">
+    <div class="head">
+        <img src="../../assets/edit.svg" alt="">
+        <img src="../../assets/close.svg" alt="">
+    </div>
+    <br>
+    <div class="body">
+        <div class="1st">
+            <div class="location">
+                <span>Location</span><br>
+                <span>Bruchhausenerstraße 36, 59759 Arnsberg</span>
+            </div>
+            <div class="ll">
+                <div class="radius">
+                    <span>Radius</span><br>
+                    <span>1 km</span>
+                </div>
+                <div class="art">
+                    <span>Art der Arbeit</span><br>
+                    <span>WDVS</span>
+                </div>
+            </div>
+            <hr>
+            <div class="2nd">
+                Preisrechnung
+                <div class="1">
+                    <span>Einheit [Menge]</span>
+                    <span>12.06.2023</span>
+                </div>
+                <div class="2">
+                    <span>Preis pro</span>
+                    <span>12.06.2023</span>
+                </div>
+                <div class="3">
+                    <span>$ pro Stunde</span>
+                    <span>12.06.2023</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
