--- a/counted-tech/src/app/location-overview/location-overview.component.html
+++ b/counted-tech/src/app/location-overview/location-overview.component.html
@@ -1,39 +1,116 @@
 <div class="main">
     <div class="head">
-        <img src="../../assets/edit.svg" alt="">
-        <img src="../../assets/close.svg" alt="">
+        <img class="imge" src="../../assets/edit.svg" alt="">
+        <img class="imge" src="../../assets/close.svg" alt="">
     </div>
     <br>
     <div class="body">
         <div class="1st">
             <div class="location">
-                <span>Location</span><br>
+                <span class="u">Location</span><br>
                 <span>Bruchhausenerstraße 36, 59759 Arnsberg</span>
             </div>
             <div class="ll">
                 <div class="radius">
-                    <span>Radius</span><br>
+                    <span class="u">Radius</span><br>
                     <span>1 km</span>
                 </div>
                 <div class="art">
-                    <span>Art der Arbeit</span><br>
+                    <span class="u">Art der Arbeit</span><br>
                     <span>WDVS</span>
                 </div>
             </div>
-            <hr>
-            <div class="2nd">
+            <hr style="height:2px;border-width:0;color:#4269E1;background-color:#4269E1">
+            <div class="snd">
                 Preisrechnung
-                <div class="1">
-                    <span>Einheit [Menge]</span>
-                    <span>12.06.2023</span>
+                <div class="it">
+                    <div class="one">
+                        <p class="u">Einheit [Menge]</p>
+                        <p>12.06.2023</p>
+                    </div>
+                    <div class="one">
+                        <p class="u">Preis pro</p>
+                        <p>12.06.2023</p>
+                    </div>
+                    <div class="one i">
+                        <p class="u">$ pro Stunde</p>
+                        <p>12.06.2023</p>
+                    </div>
                 </div>
-                <div class="2">
-                    <span>Preis pro</span>
-                    <span>12.06.2023</span>
+            </div>
+            <hr style="height:2px;border-width:0;color:#4269E1;background-color:#4269E1">
+            <div class="snd">
+                Datum
+                <div class="it">
+                    <div class="one">
+                        <p class="u">Startdatum</p>
+                        <p>12.06.2023</p>
+                    </div>
+                    <div class="one">
+                        <p class="u">Enddatum</p>
+                        <p>12.06.2023</p>
+                    </div>
+                    <div class="one i">
+                        <p class="u">Erinnerung</p>
+                        <p>12.06.2023</p>
+                    </div>
                 </div>
-                <div class="3">
-                    <span>$ pro Stunde</span>
-                    <span>12.06.2023</span>
+            </div>
+            <hr style="height:2px;border-width:0;color:#4269E1;background-color:#4269E1">
+            <div class="snd">
+                Zeiten
+                <div class="il">
+                    <div class="top">
+                        <div class="one">
+                            <p class="u">Startzeit</p>
+                            <p>13:45 Uhr</p>
+                        </div>
+                        <div class="one">
+                            <p class="u">Endzeit</p>
+                            <p>13:45 Uhr</p>
+                        </div>
+                    </div>
+                    <div class="top">
+                        <div class="one">
+                            <p class="u">Pausenstart</p>
+                            <p>13:45 Uhr</p>
+                        </div>
+                        <div class="one">
+                            <p class="u">Pausenende</p>
+                            <p>13:45 Uhr</p>
+                        </div>
+                    </div>
+                    <div class="top">
+                        <div class="one">
+                            <p class="u">Pausenstart</p>
+                            <p>13:45 Uhr</p>
+                        </div>
+                        <div class="one">
+                            <p class="u">Pausenende</p>
+                            <p>13:45 Uhr</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr style="height:2px;border-width:0;color:#4269E1;background-color:#4269E1">
+            <div class="snd">
+                Aktuelle Mitarbeiter
+                <div class="ite">
+                    <img class="img" src="../../assets/avatar.png" alt="">
+                    <img class="img" src="../../assets/avatar.png" alt="">
+                    <img class="img" src="../../assets/avatar.png" alt="">
+                    <img class="img" src="../../assets/avatar.png" alt="">
+                    <img class="img" src="../../assets/avatar.png" alt="">
+                </div>
+            </div>
+            <div class="snd">
+                Vergangene Mitarbeiter
+                <div class="ite">
+                    <img class="img" src="../../assets/avatar.png" alt="">
+                    <img class="img" src="../../assets/avatar.png" alt="">
+                    <img class="img" src="../../assets/avatar.png" alt="">
+                    <img class="img" src="../../assets/avatar.png" alt="">
+                    <img class="img" src="../../assets/avatar.png" alt="">
                 </div>
             </div>
         </div>
