--- a/counted-tech/src/app/location-overview/location-overview.component.css
+++ b/counted-tech/src/app/location-overview/location-overview.component.css
@@ -13,31 +13,66 @@ hr{
     flex-direction: row;
     justify-content: space-between;
 }
-img{
+.imge{
     /* padding: 20px; */
-    padding-right: 130px;
-    padding-left: 130px;
+    padding-right: 180px;
+    padding-left: 180px;
 }
 .location{
     background: #ffffff;
     padding: 10px;
     border-radius: 6px;
+    margin-bottom: 12px;
 }
 .ll{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 .radius{
     background: #ffffff;
     padding: 10px;
     border-radius: 6px;
-    width: 150px;
+    width: 140px;
 }
 .art{
     background: #ffffff;
     padding: 10px;
     border-radius: 6px;
-    width: 150px;
+    width: 240px;
 }
-
+.u{
+    text-decoration: underline;
+}
+.one{
+    background: #ffffff;
+    padding: 10px;
+    border-radius: 6px;
+    margin-right: 20px;
+    width: 120px;
+}
+.i{
+    margin-right: -2px;
+}
+.it{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+p{
+    margin-top: -2px;
+    margin-bottom: -2px;
+}
+.top{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 8px;
+}
+.img{
+    margin-right: 12px;
+    margin-left: 12px;
+}
+img{
+    cursor: pointer;
+}
