--- a/counted-tech/src/app/main/main.component.html
+++ b/counted-tech/src/app/main/main.component.html
@@ -8,4 +8,6 @@
 <app-card-inactive></app-card-inactive>
 <app-card-vacation></app-card-vacation> -->
 
-<app-location-overview></app-location-overview>
+<!-- <app-location-overview></app-location-overview> -->
+
+<app-add-worklocation></app-add-worklocation>
