--- a/counted-tech/src/app/add-worklocation/add-worklocation.component.html
+++ b/counted-tech/src/app/add-worklocation/add-worklocation.component.html
@@ -8,5 +8,12 @@
             <div class="lo">Location</div>
             <div class="se">Section</div>
         </div>
+        <div class="boddy">
+            <input type="text" placeholder="Your Location">
+            <input type="Radius [km]">
+            
+            <hr style="height:2px;border-width:0;color:#4269E1;background-color:#4269E1">
+            <p>Startdate</p>
+        </div>
     </div>
 </div>
