--- a/counted-tech/src/app/add-worklocation/add-worklocation.component.html
+++ b/counted-tech/src/app/add-worklocation/add-worklocation.component.html
@@ -13,7 +13,41 @@
             <input type="Radius [km]">
             
             <hr style="height:2px;border-width:0;color:#4269E1;background-color:#4269E1">
-            <p>Startdate</p>
+            <div class="snd">
+                <p>Startdate</p>
+                <input type="text" placeholder="DD:MM:YYYY">
+            </div>
+            <div class="snd">
+                <p>Enddate</p>
+                <input type="text" placeholder="DD:MM:YYYY">
+            </div>
+            <hr style="height:2px;border-width:0;color:#4269E1;background-color:#4269E1">
+            <div class="big">
+                <div class="row">
+                    <div class="snd">
+                        <p>Startime</p>
+                        <input type="text" placeholder="hh:mm">
+                    </div>
+                    <div class="snd">
+                        <p>Endtime</p>
+                        <input type="text" placeholder="hh:mm">
+                    </div>
+                    <input type="text" placeholder="Reminder">
+                </div>
+            </div>
+            <hr style="height:2px;border-width:0;color:#4269E1;background-color:#4269E1">
+            <div class="one">
+                <p>Startbreak</p>
+                <input type="text" placeholder="hh:mm">
+            </div>
+            <div class="one">
+                <p>Startbreak</p>
+                <input type="text" placeholder="hh:mm">
+            </div>
+            <div class="one">
+                <p>Startbreak</p>
+                <input type="text" placeholder="hh:mm">
+            </div>
         </div>
     </div>
 </div>
