--- a/counted-tech/src/app/add-worklocation/add-worklocation.component.html
+++ b/counted-tech/src/app/add-worklocation/add-worklocation.component.html
@@ -3,23 +3,32 @@
         <img src="../../assets/close.svg" alt="">
     </div>
     <div class="body">
-        <p>Add Worklocation</p>
+        <p><strong>Add Worklocation</strong></p>
         <div class="header">
-            <div class="lo">Location</div>
-            <div class="se">Section</div>
+            <div class="lo"><strong>Location</strong></div>
+            <div class="se"><strong>Section</strong></div>
         </div>
         <div class="boddy">
-            <input type="text" placeholder="Your Location">
-            <input type="Radius [km]">
-            
-            <hr style="height:2px;border-width:0;color:#4269E1;background-color:#4269E1">
-            <div class="snd">
-                <p>Startdate</p>
-                <input type="text" placeholder="DD:MM:YYYY">
+            <div class="hr">
+                <div class="m">
+                    <input class="full" type="text" placeholder="Your Location">
+                </div>
+                <div class="n">
+                    <input type="text" placeholder="Radius [m]">
+                    <input type="text" placeholder="Workstyle">
+                </div>
             </div>
-            <div class="snd">
-                <p>Enddate</p>
-                <input type="text" placeholder="DD:MM:YYYY">
+                
+            <hr style="height:2px;border-width:0;color:#4269E1;background-color:#4269E1">
+            <div class="bbb">
+                <div class="snd">
+                    <p>Startdate</p>
+                    <input type="text" placeholder="DD:MM:YYYY">
+                </div>
+                <div class="snd">
+                    <p>Enddate</p>
+                    <input type="text" placeholder="DD:MM:YYYY">
+                </div>
             </div>
             <hr style="height:2px;border-width:0;color:#4269E1;background-color:#4269E1">
             <div class="big">
@@ -32,22 +41,32 @@
                         <p>Endtime</p>
                         <input type="text" placeholder="hh:mm">
                     </div>
-                    <input type="text" placeholder="Reminder">
+                </div>
+                <input type="text" placeholder="Reminder">
+            </div>
+            <hr style="height:2px;border-width:0;color:#4269E1;background-color:#4269E1">
+            <div class="std">
+                <div class="one">
+                    <p>Startbreak</p>
+                    <input type="text" placeholder="hh:mm">
+                </div>
+                <div class="one">
+                    <p>Endbreak</p>
+                    <input type="text" placeholder="hh:mm">
+                </div>
+                <div class="ne">
+                    <img src="../../assets/add.svg" alt="" width="40px" class="e">
+                    <img src="../../assets/delete.svg" alt="" width="50px">
                 </div>
             </div>
             <hr style="height:2px;border-width:0;color:#4269E1;background-color:#4269E1">
-            <div class="one">
-                <p>Startbreak</p>
-                <input type="text" placeholder="hh:mm">
-            </div>
-            <div class="one">
-                <p>Startbreak</p>
-                <input type="text" placeholder="hh:mm">
-            </div>
-            <div class="one">
-                <p>Startbreak</p>
-                <input type="text" placeholder="hh:mm">
-            </div>
+            <input type="text" placeholder="Einheit [Menge]">
+            <input type="text" placeholder="Preis pro">
+            <input type="text" placeholder="Kosten pro Stunde">
+            <hr style="height:2px;border-width:0;color:#4269E1;background-color:#4269E1">
+            <input type="text" placeholder="Art der Arbeit">
+            <button>Mitarbeiter</button>
+            <button>Add Worklocation</button>
         </div>
     </div>
 </div>
