--- a/counted-tech/src/app/add-worklocation/add-worklocation.component.html
+++ b/counted-tech/src/app/add-worklocation/add-worklocation.component.html
@@ -64,9 +64,11 @@
             <input type="text" placeholder="Preis pro">
             <input type="text" placeholder="Kosten pro Stunde">
             <hr style="height:2px;border-width:0;color:#4269E1;background-color:#4269E1">
-            <input type="text" placeholder="Art der Arbeit">
-            <button>Mitarbeiter</button>
-            <button>Add Worklocation</button>
+            <input class="art" type="text" placeholder="Art der Arbeit">
+            <div class="btn">
+                <button class="mit">Mitarbeiter</button>
+                <button class="add">Add Worklocation</button>
+            </div>
         </div>
     </div>
 </div>
