--- a/counted-tech/src/app/add-employee-location/add-employee-location.component.html
+++ b/counted-tech/src/app/add-employee-location/add-employee-location.component.html
@@ -1,1 +1,14 @@
-<p>add-employee-location works!</p>
+<div class="main">
+    <div class="header">
+        <img src="../../assets/close.svg" alt="">
+    </div>
+    <div class="head">
+
+    </div>
+    <div class="body">
+
+    </div>
+    <div class="bottom">
+
+    </div>
+</div>
