--- a/counted-tech/src/app/add-jobtitle/add-jobtitle.component.html
+++ b/counted-tech/src/app/add-jobtitle/add-jobtitle.component.html
@@ -1,1 +1,20 @@
-<p>add-jobtitle works!</p>
+<div class="main">
+    <div class="top">
+        <img src="../../assets/close.svg" alt="">
+    </div>
+    <div class="head">
+        <p>Add Jobtitle</p>
+        <div class="body">
+            <input type="text" placeholder="">
+            <img src="../../assets/addgreen.svg" alt="" width="50px">
+        </div>
+        <hr style="height:2px;border-width:0;color:#4269E1;background-color:#4269E1;">
+        <br>
+    </div>
+    <div class="body">
+        <div class="btn">Jobtitle</div>
+        <img src="../../assets/delete.svg" alt="" width="50px">
+        <br>
+        <br>
+    </div>
+</div>
