--- a/counted-tech/src/app/add-news/add-news.component.html
+++ b/counted-tech/src/app/add-news/add-news.component.html
@@ -1,1 +1,17 @@
-<p>add-news works!</p>
+<div class="main">
+    <div class="top">
+        <img src="../../assets/close.svg" alt="">
+    </div>
+    <div class="head">
+        <p>Add News</p>
+        <input type="text" placeholder="List of all location and section">
+        <br>
+        <br>
+    </div>
+    <div class="body">
+        <div class="boss">News</div>
+        <br>
+        <hr style="height:2px;border-width:0;color:#4269E1;background-color:#4269E1;">
+        <button>Upload</button>
+    </div>
+</div>
