--- a/counted-tech/src/app/imprints/imprints.component.html
+++ b/counted-tech/src/app/imprints/imprints.component.html
@@ -1,1 +1,12 @@
-<p>imprints works!</p>
+<div class="main">
+    <div class="top">
+        <img src="../../assets/close.svg" alt="">
+    </div>
+    <div class="head">
+        <p>Imprints</p>
+    </div>
+    <div class="body">
+        <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque eos ratione accusamus iure? Magni nulla mollitia consequuntur, amet sit, sed soluta atque nihil optio ipsa fugit exercitationem labore dolor voluptatem?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae inventore saepe iste vero itaque aliquid odio aspernatur repellat pariatur incidunt natus, eos rem harum debitis sed consectetur sit, quia dolores?</p>
+    </div>
+</div>
