--- a/counted-tech/src/app/add-employee-location/add-employee-location.component.html
+++ b/counted-tech/src/app/add-employee-location/add-employee-location.component.html
@@ -2,8 +2,19 @@
     <div class="header">
         <img src="../../assets/close.svg" alt="">
     </div>
+    <div class="hhh">
+        <p>Add Employee</p>
+    </div>
     <div class="head">
-
+        <div class="lo">
+            <span>Location</span>
+        </div>
+        <div class="se">
+            <span>Section</span>
+        </div>
+        <div class="av">
+            <span>Available</span>
+        </div>
     </div>
     <div class="body">
 
