--- a/counted-tech/src/app/add-employee-location/add-employee-location.component.css
+++ b/counted-tech/src/app/add-employee-location/add-employee-location.component.css
@@ -8,7 +8,23 @@
     margin-left: 120px;
 }
 .head{
+    padding: 2px;
+    border: 3px solid #4269E1;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: row;
+}
+.lo{
     padding: 12px;
     border: 3px solid #4269E1;
     border-radius: 6px;
+    background: #ffffff;
+}
+.se{
+    border: none;
+    padding: 12px;
+}
+.av{
+    border: none;
+    padding: 12px;
 }
