--- a/counted-tech/src/app/main/main.component.html
+++ b/counted-tech/src/app/main/main.component.html
@@ -1,7 +1,4 @@
-<!-- <app-navbar></app-navbar>
-<app-cards></app-cards>
-<app-middle></app-middle>
-<app-bottom></app-bottom>
+<!-- 
 <app-card-all></app-card-all>
 <app-card-available></app-card-available>
 <app-card-absent></app-card-absent>
@@ -13,7 +10,10 @@
 <app-imprints></app-imprints>
 <app-terms-condition></app-terms-condition>
 <app-add-news></app-add-news> 
-<app-add-jobtitle></app-add-jobtitle>-->
-
-
+<app-add-jobtitle></app-add-jobtitle>
 <app-add-employee-location></app-add-employee-location>
+-->
+<app-navbar></app-navbar>
+<app-cards></app-cards>
+<app-middle></app-middle>
+<app-bottom></app-bottom>
