I am done with all pages, except login, signup, logoff, and reset password

--- a/counted-tech/src/app/add-employee-available/add-employee-available.component.html
+++ b/counted-tech/src/app/add-employee-available/add-employee-available.component.html
@@ -1,1 +1,23 @@
-<p>add-employee-available works!</p>
+<div class="main">
+    <div class="header">
+        <img src="../../assets/close.svg" alt="">
+    </div>
+    <div class="hhh">
+        <p><strong>Add Employee</strong></p>
+    </div>
+    <div class="head">
+        <div class="lo we">
+            <span>Location</span>
+        </div>
+        <div class="se we">
+            <span>Section</span>
+        </div>
+        <div class="av we">
+            <span>Available</span>
+        </div>
+    </div>
+    <br>
+    <div class="bottom">
+        <button>Code --> Companyname_free</button>
+    </div>
+</div>
