--- a/counted-tech/src/app/add-employee-location/add-employee-location.component.html
+++ b/counted-tech/src/app/add-employee-location/add-employee-location.component.html
@@ -3,23 +3,45 @@
         <img src="../../assets/close.svg" alt="">
     </div>
     <div class="hhh">
-        <p>Add Employee</p>
+        <p><strong>Add Employee</strong></p>
     </div>
     <div class="head">
-        <div class="lo">
+        <div class="lo we">
             <span>Location</span>
         </div>
-        <div class="se">
+        <div class="se we">
             <span>Section</span>
         </div>
-        <div class="av">
+        <div class="av we">
             <span>Available</span>
         </div>
     </div>
+    <br>
     <div class="body">
-
+        <div class="div">
+            <p class="p">Address</p>
+        </div>
+        <div class="div">
+            <p class="p">Address</p>
+        </div>
+        <div class="div">
+            <p class="p">Address</p>
+        </div>
+        <div class="div">
+            <p class="p">Address</p>
+        </div>
+        <div class="div">
+            <p class="p">Address</p>
+        </div>
+        <div class="div">
+            <p class="p">Address</p>
+        </div>
     </div>
+    <br>
     <div class="bottom">
-
+        <div class="div">
+            <p class="p">companyname_1234</p>
+        </div>
+        <button class="button">Add Code</button>
     </div>
 </div>
