--- a/counted-tech/src/app/add-employee-location/add-employee-location.component.css
+++ b/counted-tech/src/app/add-employee-location/add-employee-location.component.css
@@ -5,7 +5,7 @@
     align-items: center;
 }
 .header{
-    margin-left: 120px;
+    margin-left: 280px;
 }
 .head{
     padding: 2px;
@@ -20,6 +20,9 @@
     border-radius: 6px;
     background: #ffffff;
 }
+.we{
+    width: 90px;
+}
 .se{
     border: none;
     padding: 12px;
@@ -27,4 +30,45 @@
 .av{
     border: none;
     padding: 12px;
+}
+span{
+    font-weight: bold;
+}
+.body{
+    display: flex;
+    flex-direction: column;
+    border: 2px solid #4269E1;
+    padding: 4px;
+    border-radius: 6px;
+    justify-content: center;
+    width: 350px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+}
+.div{
+    align-items: center;
+    width: 9  0%;
+    background: #ffffff;
+    border-radius: 4px;
+    padding: 2px;
+    margin: 2px;
+    margin-right: 2px;
+}
+.p{
+    margin-left: 12px;
+}
+.bottom{
+    width: 350px;
+}
+.bottom .duv{
+    width: 350px;
+}
+.button{
+    width: 100%;
+    background: #4269E1;
+    color: #ffffff;
+    border: none;
+    height: 44px;
+    border-radius: 8px;
+    margin-top: 12px;
 }
