--- a/counted-tech/src/app/add-employee-section/add-employee-section.component.html
+++ b/counted-tech/src/app/add-employee-section/add-employee-section.component.html
@@ -1,1 +1,47 @@
-<p>add-employee-section works!</p>
+<div class="main">
+    <div class="header">
+        <img src="../../assets/close.svg" alt="">
+    </div>
+    <div class="hhh">
+        <p><strong>Add Employee</strong></p>
+    </div>
+    <div class="head">
+        <div class="lo we">
+            <span>Location</span>
+        </div>
+        <div class="se we">
+            <span>Section</span>
+        </div>
+        <div class="av we">
+            <span>Available</span>
+        </div>
+    </div>
+    <br>
+    <div class="body">
+        <div class="div">
+            <p class="p">Section</p>
+        </div>
+        <div class="div">
+            <p class="p">Section</p>
+        </div>
+        <div class="div">
+            <p class="p">Section</p>
+        </div>
+        <div class="div">
+            <p class="p">Section</p>
+        </div>
+        <div class="div">
+            <p class="p">Section</p>
+        </div>
+        <div class="div">
+            <p class="p">Section</p>
+        </div>
+    </div>
+    <br>
+    <div class="bottom">
+        <div class="div">
+            <p class="p">companyname_1234</p>
+        </div>
+        <button class="button">Add Code</button>
+    </div>
+</div>
