--- a/counted-tech/src/app/main/main.component.html
+++ b/counted-tech/src/app/main/main.component.html
@@ -1,19 +1,7 @@
-<app-navbar></app-navbar>
-<app-cards></app-cards>
-<app-middle></app-middle>
-<app-bottom></app-bottom>
-<!-- <app-card-all></app-card-all>
-<app-card-available></app-card-available>
-<app-card-absent></app-card-absent>
-<app-card-inactive></app-card-inactive>
-<app-card-vacation></app-card-vacation>
-<app-location-overview></app-location-overview>
-<app-add-worklocation></app-add-worklocation>
-<app-privacy-policy></app-privacy-policy>
-<app-imprints></app-imprints>
-<app-terms-condition></app-terms-condition>
-<app-add-news></app-add-news> 
-<app-add-jobtitle></app-add-jobtitle>
-<app-add-employee-location></app-add-employee-location>
-<app-add-employee-available></app-add-employee-available>
-<app-add-employee-section></app-add-employee-section>-->
+<div>
+    <app-navbar></app-navbar>
+    <app-cards></app-cards>
+    <app-middle></app-middle>
+    <app-bottom></app-bottom>
+    <router-outlet></router-outlet>
+</div>
