--- a/counted-tech/src/app/app.component.html
+++ b/counted-tech/src/app/app.component.html
@@ -8,7 +8,8 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<app-main></app-main>
+<!-- <app-main></app-main> -->
+<router-outlet></router-outlet>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
