--- a/counted-tech/src/app/card-vacation/card-vacation.component.html
+++ b/counted-tech/src/app/card-vacation/card-vacation.component.html
@@ -5,7 +5,7 @@
                 <span>Vacation</span>
             </div>
             <div class="img">
-                <img src="../../assets/close.svg" alt="" class="svg">
+                <img (click)="openMainComponent()" src="../../assets/close.svg" alt="" class="svg">
             </div>
         </div>
         <br>
