--- a/counted-tech/src/app/add-employee-section/add-employee-section.component.html
+++ b/counted-tech/src/app/add-employee-section/add-employee-section.component.html
@@ -1,18 +1,18 @@
 <div class="main">
     <div class="header">
-        <img src="../../assets/close.svg" alt="">
+        <img (click)="openMainComponent()" src="../../assets/close.svg" alt="">
     </div>
     <div class="hhh">
         <p><strong>Add Employee</strong></p>
     </div>
     <div class="head">
-        <div class="lo we">
+        <div (click)="openAddEmployeeLocation()" class="lo we">
             <span>Location</span>
         </div>
         <div class="se we">
             <span>Section</span>
         </div>
-        <div class="av we">
+        <div (click)="openAddEmployeeAvailable()" class="av we">
             <span>Available</span>
         </div>
     </div>
